<resources>
    <string name="app_name">team3_contactsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email을 설정해주세요</string>
    <string name="activitycount">활동 횟수</string>
    <string name="seedProtector">씨앗 활동가</string>
    <string name="doingActivity">활동 중인 모임</string>
    <string name="seedtemp">당신의 새싹 온도를 확인하세요</string>
    <string name="bokbear">북극곰</string>
    <string name="scrolltitel">나의 새싹 온도는??</string>
    <string name="seedName">씨앗 활동가</string>
    <string name="support">Support Earth</string>
    <string name="telable">연락 가능한 번호</string>
    <string name="title_home">내 연락처</string>
    <string name="title_dashboard">모임</string>
    <string name="title_notifications">마이페이지</string>
    <string name="honeybee">꿀벌 살리기 캠페인</string>
    <string name="earthwarm">지구를 위한 모금</string>
    <string name="correction">정보 수정하기</string>
    <string name="Okay">확인</string>
    <string name="title_contactDetail">상세정보 페이지</string>
    <string name="text_ct_memberName">멤버이름</string>
    <string name="btn_message">MESSAGE</string>
    <string name="btn_call">CALL</string>
    <string name="detail_mobileName">Mobile</string>
    <string name="detail_mobileNum">핸드폰 번호</string>
    <string name="detail_natureNum">51</string>
    <string name="detail_natureName">환경 보호가</string>
    <string name="detail_groupNameGroup">$(클릭한 사람)이 가입한 모임</string>
    <string name="detail_eventName">Event</string>
    <string name="detail_alarmNum">10분이후 알림</string>
    <string name="mypage_memotext">모임 일정 메모</string>
    <string name="text_ctDetail_memberName">멤버이름</string>
    <string name="ctDetail_btn_message">MESSAGE</string>
    <string name="ctDetail_btn_call">CALL</string>
    <string name="ctDetail_mobileName">Mobile</string>
    <string name="ctDetail_mobileNum">핸드폰 번호</string>
    <string name="ctDetail_natureNum">51</string>
    <string name="ctDetail_natureName">환경 보호가</string>
    <string name="ctDetail_groupNameGroup">$(클릭한 사람)이 가입한 모임</string>
    <string name="ctDetail_eventName">Event</string>
    <string name="ctDetail_alarmNum">10분이후 알림</string>
    <string name="Mypage_phoneNumber">01012341234</string>
    <string name="Mypage_email">123@gmail.com</string>
    <string name="Mypage_name">사람이름1</string>
    <string name="mycontact_actionbar">내 연락처</string>
    <string name="group_actionbarName">모임 그룹 페이지</string>
    <string name="group_joinedGroup">내가 가입한 그룹</string>
    <string name="group_cruit">모집 그룹</string>
    <string name="mypage_actionbarName">마이페이지</string>
    <string name="groupDetail_actionbarName">모임 상세 페이지</string>
    <string name="mpdialog_errorName">이름이 잘못 입력 되었습니다.</string>
    <string name="mpdialog_errorPhoneNumber">번호는 숫자만 입력 가능합니다.</string>
    <string name="mpdialog_errorEmail">이메일은 aaa@aaa.aaa로 입력해주세요</string>
    <string name="mycontact_grid_view">grid view</string>
    <string name="mycontact_list_view">list view</string>
</resources>